ultimas modificaciones al connector

--- a/src/bucket-connector-semillerio.ipynb
+++ b/src/bucket-connector-semillerio.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +52,13 @@
     "    blob_name = f\"flow227/{modelo}/bitacora_run.txt\"\n",
     "    blob = bucket.blob(blob_name)\n",
     "\n",
-    "    # Se descarga como texto\n",
+    "    # se descarga como txt\n",
     "    file_content = blob.download_as_text()\n",
-    "    # Transformar el contenido de texto en un DataFrame de pandas\n",
+    "    # leo el txt a un dataframe\n",
     "    df = pd.read_csv(io.StringIO(file_content), sep='\\t')\n",
     "    \n",
     "    if etapa == 'scoring':\n",
-    "        ## Selecciono la etapa\n",
+    "        ## selecciono la etapa segun el nombre de la función\n",
     "        resultado = df.query('funcion == \"SC_scoring_semillerio\"')\n",
     "        resultado = resultado.iloc[0]['expw']\n",
     "        resultado = str(resultado).split('/')[-1]\n",
@@ -66,14 +66,14 @@
     "        \n",
     "        blob_name = f\"expw227/{resultado}/tb_future_prediccion.txt\"\n",
     "        blob = bucket.blob(blob_name)\n",
-    "        # Descargar el contenido del archivo como texto\n",
+    "        # descarga el contenido del archivo como texto\n",
     "        file_content_sc = blob.download_as_text()  # Si el archivo es texto\n",
     "\n",
-    "        # Guardar el contenido en el diccionario\n",
+    "        # guardar el contenido en el diccionario\n",
     "        df_resultado = pd.read_csv(io.StringIO(file_content_sc), sep='\\t')\n",
     "    \n",
     "    elif etapa == 'kaggle':\n",
-    "        ## Selecciono la etapa\n",
+    "        ## selecciono la etapa segun el nombre de la función\n",
     "        resultado = df.query('funcion == \"KA_evaluate_kaggle_semillerio\"')\n",
     "        resultado = resultado.iloc[0]['expw']\n",
     "        resultado = str(resultado).split('/')[-1]\n",
@@ -82,10 +82,10 @@
     "        \n",
     "        blob_name = f\"expw227/{resultado}/tb_ganancias.txt\"\n",
     "        blob = bucket.blob(blob_name)\n",
-    "        # Descargar el contenido del archivo como texto\n",
+    "        # descargar el contenido del archivo como texto\n",
     "        file_content_ka = blob.download_as_text()  # Si el archivo es texto\n",
     "\n",
-    "        # Guardar el contenido en el diccionario\n",
+    "        # guardar el contenido en el diccionario\n",
     "        df_resultado = pd.read_csv(io.StringIO(file_content_ka), sep='\\t')\n",
     "    \n",
     "    return df_resultado"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +110,8 @@
     "\"ensamble_g01_comp3-001\",\n",
     "\"ensamble_g02_comp3-002\",\n",
     "\"ensamble_g03_comp3-001\",\n",
-    "#\"ensamble_g04_comp3-004\",\n",
-    "#\"ensamble_g05_comp3-002\",\n",
+    "#\"ensamble_g04_comp3-004\", # este es muy malo\n",
+    "#\"ensamble_g05_comp3-002\", # este tambien\n",
     "\"ensamble_g06_comp3-001\",\n",
     "\"ensamble_g07_comp3-001\",\n",
     "\"ensamble_g08_comp3-001\",]"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -253,16 +253,15 @@
     "    for i, df in enumerate(dataframes[1:], start=2): #itero sobre los demas\n",
     "        merged_df = merged_df.merge(df, on=['numero_de_cliente', 'foto_mes', 'clase_ternaria'], suffixes=('', f'_{i}'))\n",
     "    \n",
-    "    # Calcular el promedio de las columnas 'sem_1_1'\n",
+    "    # calcula el promedio de las columnas 'sem_1_1'\n",
     "    sem_1_1_columns = [f'sem_1_1_{i}' if i > 1 else 'sem_1_1' for i in range(1, len(dataframes) + 1)]\n",
     "    merged_df['sem_1_1_avg'] = merged_df[sem_1_1_columns].mean(axis=1)\n",
     "    \n",
-    "    # Crear el dataframe final con las columnas requeridas\n",
+    "    # crear el dataframe final con las columnas requeridas\n",
     "    avg_df = merged_df[['numero_de_cliente', 'foto_mes', 'clase_ternaria', 'sem_1_1_avg']]\n",
     "    \n",
     "    return avg_df\n",
     "\n",
-    "# Ejemplo de uso\n",
     "avg_df = merge_and_calculate_avg(predicciones)\n",
     "avg_df.head()"
    ]
@@ -275,14 +274,12 @@
    "source": [
     "final_df = avg_df.sort_values(\"sem_1_1_avg\", ascending = False).reset_index(drop = True)\n",
     "\n",
-    "# Crear el DataFrame ensamble_kaggle\n",
-    "ensamble_kaggle = final_df[['numero_de_cliente']].copy()\n",
+    "ensamble_kaggle = final_df[['numero_de_cliente']].copy() # se crea el df para kaggle\n",
     "\n",
-    "# Asignar el valor 1 a los primeros 11,000 registros y 0 a los restantes\n",
+    "# seleccion del corte\n",
     "ensamble_kaggle['Predicted'] = 0\n",
     "ensamble_kaggle.loc[:10999, 'Predicted'] = 1\n",
     "\n",
-    "# Mostrar los primeros registros del DataFrame resultante\n",
     "ensamble_kaggle"
    ]
   },
@@ -307,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +333,7 @@
     }
    ],
    "source": [
-    "ganancias = {} #demora por mi bajo computer literacy y porque los archivos son grandes? \n",
+    "ganancias = {} \n",
     "\n",
     "for modelo in modelos: \n",
     "    print(modelo)\n",
@@ -347,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -525,15 +522,15 @@
    ],
    "source": [
     "def merge_ganancias(ganancias):\n",
-    "    # Obtener los dataframes del diccionario\n",
+    "    # obtengo los values / dataframes del dict\n",
     "    dataframes = list(ganancias.values())\n",
     "    \n",
-    "    # Realizar los merges\n",
+    "    # realizar los merges\n",
     "    merged_df = dataframes[0]\n",
     "    for i, df in enumerate(dataframes[1:], start=2):\n",
     "        merged_df = merged_df.merge(df, on=['envios'], suffixes=('', f'_{i}'))\n",
     "    \n",
-    "    # Calcular la media de todas las columnas m1_{i}\n",
+    "    # calcular la media de todas las columnas m1_{i}\n",
     "    m1_columns = [col for col in merged_df.columns if col.startswith('m1')]\n",
     "    merged_df['m1_avg'] = merged_df[m1_columns].mean(axis=1)\n",
     "    \n",
@@ -545,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -561,13 +558,10 @@
    ],
    "source": [
     "def plot_merged_df(merged_df):\n",
-    "    # Ordenar el DataFrame por la columna 'envios' de forma ascendente\n",
     "    merged_df = merged_df.sort_values(by='envios')\n",
     "    \n",
-    "    # Crear el gráfico de líneas\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    \n",
-    "    # Lista de columnas a graficar\n",
     "    columns_to_plot = ['m1', 'm1_2', 'm1_3', 'm1_4', 'm1_5', 'm1_6', 'm1_9', 'm1_avg']\n",
     "    \n",
     "    # Graficar cada columna\n",
